<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/user"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:visibility="gone"
        tools:visibility="visible"
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        tools:text="User added successfully." />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etFirstName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle"
        android:hint="@string/first_name"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@id/etLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLastName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle"
        android:hint="@string/last_name"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etFirstName"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle"
        android:hint="@string/email"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/etFirstName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAge"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle"
        android:hint="@string/age"
        android:inputType="numberDecimal"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/add"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/btnUpdate"
        app:layout_constraintStart_toEndOf="@id/etAge"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdate"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/update"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/btnRemove"
        app:layout_constraintStart_toEndOf="@id/btnAdd"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRemove"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/remove"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnUpdate"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />


</androidx.constraintlayout.widget.ConstraintLayout>